--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <main>
-        <header>Bienvenue</header>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus ipsum unde praesentium possimus qui, dignissimos repellat ullam tempore, inventore quisquam harum in soluta at eos amet nulla debitis adipisci sed? Totam excepturi consequuntur quaerat distinctio voluptate, eos possimus alias amet, sequi facilis quae harum quos velit magnam ea officiis assumenda!</p>
+        <div id="small">
+            <h2>Content for smartphones</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem magni odit recusandae fuga accusamus, natus odio accusantium porro sunt quaerat quae exercitationem inventore harum. Mollitia, vel praesentium exercitationem repellat alias soluta labore aut hic vitae tenetur sint, quisquam ipsum facere quibusdam qui! Ex blanditiis molestiae voluptas dolorum iure et earum quo temporibus doloremque reprehenderit minima mollitia necessitatibus ipsum magnam, facilis quam? Sequi dolor deleniti itaque fuga vero error modi, voluptatum impedit quasi animi. Blanditiis iusto veniam repudiandae placeat beatae tenetur illo ipsam aliquam corrupti a libero dolorum id consectetur officia fugit itaque cumque fuga at, provident nobis cum! Aperiam.</p>
+        </div>
+        <div id="medium">
+            <h2>Content for tablets</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem magni odit recusandae fuga accusamus, natus odio accusantium porro sunt quaerat quae exercitationem inventore harum. Mollitia, vel praesentium exercitationem repellat alias soluta labore aut hic vitae tenetur sint, quisquam ipsum facere quibusdam qui! Ex blanditiis molestiae voluptas dolorum iure et earum quo temporibus doloremque reprehenderit minima mollitia necessitatibus ipsum magnam, facilis quam? Sequi dolor deleniti itaque fuga vero error modi, voluptatum impedit quasi animi. Blanditiis iusto veniam repudiandae placeat beatae tenetur illo ipsam aliquam corrupti a libero dolorum id consectetur officia fugit itaque cumque fuga at, provident nobis cum! Aperiam.</p>
+        </div>
+        <div id="large">
+            <h2>Content for larger screens</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem magni odit recusandae fuga accusamus, natus odio accusantium porro sunt quaerat quae exercitationem inventore harum. Mollitia, vel praesentium exercitationem repellat alias soluta labore aut hic vitae tenetur sint, quisquam ipsum facere quibusdam qui! Ex blanditiis molestiae voluptas dolorum iure et earum quo temporibus doloremque reprehenderit minima mollitia necessitatibus ipsum magnam, facilis quam? Sequi dolor deleniti itaque fuga vero error modi, voluptatum impedit quasi animi. Blanditiis iusto veniam repudiandae placeat beatae tenetur illo ipsam aliquam corrupti a libero dolorum id consectetur officia fugit itaque cumque fuga at, provident nobis cum! Aperiam.</p>
+        </div>
+
     </main>
 </body>
+
 </html>
